# vvpilot

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE.md  Makefile  README.md
cmake/: Toolchain-goto-cc.cmake  goto-cc-toolchain.cmake  goto-toolchain.cmake
cmake/Modules/: nuttx.cmake
scripts/: build-mc.sh  build.sh
src/mavlink/: mavlink_helpers.h
src/mavlink/common/: version.h
src/vvp/cbmc/: CMakeLists.txt  cbmc_stub.c  cbmc_stub.h
src/vvp/commander/: CMakeLists.txt  Commander.c  Commander.h  State.c  State.h  StateAuto.c  StateAuto.h  StateGuided.c  StateManual.c  StateManual.h  test_commander.c
src/vvp/common/: CMakeLists.txt  common.h  test_common.c
src/vvp/hal/: CMakeLists.txt  hal.h
src/vvp/hal/posix/: hal_posix.c  serial.c
src/vvp/modules/commander/: CMakeLists.txt  Commander.h  StateGuided.c  StateGuided.h  StateManual.c  StateManual.h  test_commander.c
src/vvp/modules/mavlink_transceiver/: CMakeLists.txt  MavlinkTransceiver.c  MavlinkTransceiver.h  mavlink_transceiver.c  mavlink_transceiver.h  test_mavlink_transceiver.c
vvp/cbmc/: CMakeLists.txt  cbmc_stub.c
vvp/common/: test_common.c
vvp/hal/posix/: CMakeLists.txt  serial.h  test_hal_posix.c
vvp/modules/commander/: Commander.c  StateAuto.c
vvp/modules/mavlink_transceiver/: mavlink_transceiver.h
